# monkerust

./: README.md
wacir/: Cargo.toml
wacir/benches/: ast_test.rs  lexer_test.rs  main_test.rs  parser_test.rs  vm_test.rs
wacir/src/: ast.rs  ast_test.rs  benchmark.rs  benchmark_test.rs  builtins.rs  code.rs  code_test.rs  compiler.rs  compiler_test.rs  environment.rs  evaluator.rs  evaluator_test.rs  frame.rs  lexer.rs  lexer_test.rs  lib.rs  main.rs  object.rs  object_test.rs  parser.rs  parser_test.rs  repl.rs  symbol_table.rs  symbol_table_test.rs  vm.rs  vm_test.rs
wacir/src/ast/: ast.rs  ast_test.rs  mod.rs
wacir/src/code/: code.rs  code_test.rs  mod.rs
wacir/src/compiler/: compiler.rs  compiler_test.rs  mod.rs  symbol_table.rs  symbol_table_test.rs
wacir/src/evaluator/: builtins.rs  evaluator.rs  evaluator_test.rs
wacir/src/object/: environment.rs  mod.rs  object.rs  object_test.rs
wacir/src/parser/: parser.rs
wacir/src/repl/: repl.rs
wacir/src/token/: token.rs
wacir/src/vm/: frame.rs  mod.rs  vm.rs  vm_test.rs
waiir/: Cargo.toml
waiir/src/: ast.rs  benchmark.rs  env.rs  evaluator.rs  evaluator_test.rs  lexer.rs  lexer_test.rs  lib.rs  main.rs  object.rs  parser.rs  parser_test.rs  repl.rs  token.rs
waiir/src/ast/: ast.rs  ast_test.rs  mod.rs
waiir/src/evaluator/: builtins.rs  evaluator.rs  evaluator_test.rs  mod.rs
waiir/src/lexer/: lexer.rs  lexer_test.rs  mod.rs
waiir/src/object/: environment.rs  object.rs  object_test.rs
waiir/src/parser/: mod.rs  parser.rs  parser_test.rs
waiir/src/repl/: mod.rs  repl.rs
(+55 files in other folders)
