[package]
name = "wacir"
version = "0.1.0"
authors = ["阿飞 <jinlongfei@sina.com>"]
edition = "2018"
default-run = "wacir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"


[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
